# FastAPI-React-BackFrontend

backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v2/: routers.py
backend/app/api/v2/endpoints/: user.py
backend/app/core/: config.py  db_settings.py
backend/app/crud/: user.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/mysql-init/: init.sql
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: UserForm.js  UserList.js  UserTable.js
