[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
    "python3-distutils>=0.0.1",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
